--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
     <title>Franciska Novosel</title>
     <style>
+        div, h3, p, li, q, b, i, u, ul, ol{
+            background-color: #6cc067;
+        }
         h3{
             font-size: 25px;
         }
@@ -25,14 +28,15 @@
         <h1>Franciska Novosel</h1>
         <h2>Opis stranice</h2>
         <nav>
-            <ul>
-                <li><a href="https://moodle.srce.hr/2022-2023/?redirect=0">Merlin 2023</a></li>
-                <li><a href="./multimedija.html">Multimedija</a></li>
-                <li><a href="https://moodle.srce.hr/2022-2023/pluginfile.php/8332310/mod_page/content/5/10_vje%C5%BEba_HTML.pdf">PDF</a></li>
+            <ul style="background-color: #8df184;">
+                <li style="background-color: #8df184;"><a href="https://moodle.srce.hr/2022-2023/?redirect=0">Merlin 2023</a></li>
+                <li style="background-color: #8df184;"><a href="./multimedija.html">Multimedija</a></li>
+                <li style="background-color: #8df184;"><a href="https://moodle.srce.hr/2022-2023/pluginfile.php/8332310/mod_page/content/5/10_vje%C5%BEba_HTML.pdf">PDF</a></li>
             </ul>
         </nav>
     </header>
     <body>
+        <div>
         <h3><u>O meni</u></h3>
             <p>Ja sam Franciska Novosel. Studentica sam 1. godine preddiplomskog studija <b>Grafički dizajn</b> u Zagrebu, smjer <i>dizajn grafičkih proizvoda</i>. Volim životinje i umjetnost. Moja najdraža izreka je:<q>Sve se događa s razlogom.</p>
         <ol>
@@ -48,6 +52,7 @@
             <li>Konj</li>
             <li>Srna</li>
         </ul>
+    </div>
     </body>
 </main>
 </html>
