--- a/multimedija.html
+++ b/multimedija.html
@@ -2,6 +2,21 @@
 <head>
     <title>Multimedija</title>
     <style>
+        .div1{
+            float: left;
+            padding-left: 150px;
+        }
+        .div2{
+            float: right;
+            padding-right: 150px;
+        }
+        div{
+            text-align: center;
+        }
+        h3{
+            font-size: 30px;
+            text-align: center;
+        }
         img {
             padding: 5px;
         }
@@ -25,22 +40,32 @@
         </nav>
     </header>
     <body>
-        <img src="./multimediji/slika1.JPG" width="368" height="207"><br>
-        <img src="./multimediji/slika2.JPG" width="368" height="430"><br>
-        <img src="./multimediji/slika3.jpg" width="432" height="576">
-        <img src="./multimediji/slika4.jpg" width="432" height="576">
-        <img src="./multimediji/slika5.jpg" width="432" height="576">
-        <video width="432" height="350" controls><br>
-            <source src="./multimediji/vježba9_01.mp4" type="video/mp4"><br>
-        </video>
-        <iframe  width="432" height="330" src="https://www.youtube.com/embed/vlVSJ0AvZe0"
-            title="YouTube video player"  
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            allowfullscreen>
-        </iframe><br>
-        <audio controls>
-            <source src="./multimediji/zvuk1.mp3" type="audio/mp3">
-        </audio>
+        <div>
+            <h3>Slike</h3>
+            <img src="./multimediji/slika3.jpg" width="432" height="576">
+            <img src="./multimediji/slika4.jpg" width="432" height="576">
+            <img src="./multimediji/slika5.jpg" width="432" height="576">
+        </div>
+        <div class="div1">
+            <h3>Video</h3>
+            <video width="432" height="350" controls><br>
+                <source src="./multimediji/vježba9_01.mp4" type="video/mp4"><br>
+            </video>
+        </div>
+        <div class="div2">
+            <h3>Video s YouTube-a</h3>
+            <iframe  width="432" height="330" src="https://www.youtube.com/embed/vlVSJ0AvZe0"
+                title="YouTube video player"  
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                allowfullscreen>
+            </iframe><br>
+        </div>
+        <div>
+            <h3>Zvuk</h3>
+            <audio controls>
+                <source src="./multimediji/zvuk1.mp3" type="audio/mp3">
+            </audio>
+        </div>
     </body>
 </main>
 </html>
